--- a/pages/proyectos.html
+++ b/pages/proyectos.html
@@ -209,20 +209,21 @@
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
               <div class="flex justify-center pt-3">
                 <img
-                  src="../img/GIPP.png"
-                  alt="Proyecto de prácticas"
+                  src="../img/GIPP/GIPP.png"
+                  alt="GIPP"
                   class="h-48 object-cover"
                 />
               </div>
 
               <div class="p-6">
-                <h3 class="text-2xl font-semibold mb-2">
-                  Proyecto de Estadías
-                </h3>
+                <h3 class="text-2xl font-semibold mb-2 text-center">GIIP</h3>
                 <p class="text-gray-700 mb-4 text-justify">
-                  El Gestor de Información y Pruebas Psicológicas es un proyecto
-                  desarrollado en la Universidad Politécnica de Tlaxcala para el
-                  área de Psicología.
+                  El Gestor de Información y Pruebas Psicológicas de la
+                  Universidad Politécnica de Tlaxcala centraliza la
+                  administración de pruebas, optimizando tiempos y reduciendo
+                  errores. Mejora el análisis de datos, agiliza la toma de
+                  decisiones y contribuye a la sostenibilidad institucional al
+                  minimizar el uso de recursos físicos.
                 </p>
                 <button id="GIPP_btn" class="text-teal-600 hover:underline">
                   <h1>Ver más detalles →</h1>
@@ -233,20 +234,22 @@
             <div class="bg-white rounded-lg shadow-lg overflow-hidden">
               <div class="flex justify-center pt-3">
                 <img
-                  src="../img/GIPP.png"
-                  alt="Proyecto de prácticas"
+                  src="../img/AIVI/logoazul.png"
+                  alt="AIVI"
                   class="h-48 object-cover"
                 />
               </div>
 
               <div class="p-6">
-                <h3 class="text-2xl font-semibold mb-2">
-                  Proyecto de Estadías
+                <h3 class="text-2xl font-semibold mb-2 text-center">
+                  AIVI - Gestor Clínico Naturista
                 </h3>
                 <p class="text-gray-700 mb-4 text-justify">
-                  El Gestor de Información y Pruebas Psicológicas es un proyecto
-                  desarrollado en la Universidad Politécnica de Tlaxcala para el
-                  área de Psicología.
+                  El Gestor Clínico Naturista AIVI optimiza la administración de
+                  un consultorio naturópata, digitalizando recetas, historial
+                  clínico y citas. Agiliza las consultas, mejora el acceso a la
+                  información y moderniza la atención para un servicio más
+                  eficiente y personalizado.
                 </p>
                 <button id="AIVI_btn" class="text-teal-600 hover:underline">
                   <h1>Ver más detalles →</h1>
@@ -266,9 +269,10 @@
               <div class="p-6">
                 <h3 class="text-2xl font-semibold mb-2">Próximo proyecto...</h3>
                 <p class="text-gray-700 mb-4 text-justify">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
-                  repellendus dolorem praesentium quae aliquid ipsam dicta
-                  animi.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Placeat porro doloribus ut exercitationem consequuntur eum
+                  provident debitis ipsa officiis consequatur. Explicabo,
+                  eveniet a accusamus impedit pariatur repudiandae id at est.
                 </p>
                 <a
                   href="#"
@@ -651,28 +655,28 @@
               >
                 <div>
                   <h2 class="text-center text-lg font-bold">
-                    Módulo 6: Pacientes (Usuarios que reciben atención psicológica)
+                    Módulo 6: Pacientes (Usuarios que reciben atención
+                    psicológica)
                   </h2>
                 </div>
 
                 <div class="my-2 w-3/4 text-justify">
                   <ol class="list-disc">
                     <li>
-                      Inicio: Vista con información general de sus pruebas y citas.
+                      Inicio: Vista con información general de sus pruebas y
+                      citas.
                     </li>
-                    <li>
-                      Citas: Agendar citas con psicólogos asignados.
-                    </li>
+                    <li>Citas: Agendar citas con psicólogos asignados.</li>
                     <li>
                       Historial de Citas: Consultar citas pasadas y futuras.
                     </li>
                     <li>
-                      Realización de Pruebas Psicológicas: Completar las pruebas asignadas por el psicólogo.
+                      Realización de Pruebas Psicológicas: Completar las pruebas
+                      asignadas por el psicólogo.
                     </li>
                   </ol>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
@@ -769,5 +773,6 @@
     <script src="../node_modules/feather-icons/dist/feather.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
     <script src="../js/app.js"></script>
+    <script src="../js/proyectos.js"></script>
   </body>
 </html>
