--- a/pages/sobre_mi.html
+++ b/pages/sobre_mi.html
@@ -102,7 +102,7 @@
         class="fixed inset-0 bg-black bg-opacity-50 hidden z-40 transform -translate-x-full transition-transform duration-300 ease-in-out"
       >
         <div
-          class="absolute left-0 top-0 w-56 h-full bg-teal-800 text-white shadow-lg p-6"
+          class="absolute left-0 top-0 w-56 h-full bg-primary text-white shadow-lg p-6"
         >
           <h2
             class="text-3xl font-bold mb-2 pt-1 border-4 border-white rounded-lg text-center"
